<resources>
    <string name="app_name">Tripper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="space_name">모여 칼국수</string>
    <string name="space_address">종로구 모여로 162길 -2</string>
    <string name="feed">피드</string>
    <string name="map_search">지도 검색</string>
    <string name="write_trip">여행 쓰기</string>
    <string name="my_profile">내 프로필</string>


<!--    피드-->
    <string name="defaultId">id</string>
    <string name="item_feed_default_title">여행 다녀왔습니다!</string>
    <string name="item_feed_default_hashtag">#여행 #여기저기</string>
    <string name="item_feed_default_rate">아직 평점이 없어요</string>

<!--    장소추가-->
    <string name="activity_add_place_guide_text">장소검색(두 글자 이상 입력)</string>
    <string name="addPlace">장소추가</string>

<!--    계정 설정-->
    <string name="withdrawal">회원 탈퇴</string>
    <string name="account">계정</string>

<!--    캘린더-->
    <string name="activity_calendar_top_bar_text">여행 정보 입력</string>
    <string name="activity_calendar_guide_text_date">여행 날짜를 알려주세요</string>
    <string name="activity_calendar_guide_text_transport">이동수단을 알려주세요</string>
    <string name="next">다음</string>

<!--    댓글-->
    <string name="comment">댓글</string>
    <string name="default_count">0</string>
    <string name="activity_comment_guide_text">댓글쓰기</string>
    <string name="enroll">등록</string>

<!--    좋아요-->
    <string name="like">좋아요</string>

<!--    로그인-->
    <string name="app_full_name">모두의 여행 이야기 , 트리퍼</string>
    <string name="kakao_login">카카오톡으로 계속하기</string>
    <string name="activity_login_skip_login">로그인 건너뛰기</string>

<!--    지도 검색-->
    <string name="searchArea">여행 지역 검색</string>
    <string name="default_rate">아직 평점이 없어요</string>
    <string name="before_rating">어땠나요?</string>
    <string name="profile_setting">프로필 설정</string>

<!--    프로필 설정-->
    <string name="nickname_guide">닉네임 (최대 10글자)</string>
    <string name="duplication_check">중복확인</string>
    <string name="available_nickname">사용가능한 닉네임입니다.</string>
    <string name="profile_setting_guide">프로필 사진과 닉네임을 설정해 주세요</string>
    <string name="complete">완료</string>


</resources>