<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main">

    <ImageView
        android:id="@+id/login_logo_iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_signature_w_206dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:paddingBottom="20dp"
        />

    <TextView
        android:id="@+id/login_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_full_name"
        android:textSize="@dimen/activity_login_app_name_size"
        android:textColor="@color/white"
        android:fontFamily="@font/nanumbarungothic_400"
        app:layout_constraintTop_toBottomOf="@id/login_logo_iv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/login_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/activity_login_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_login_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.6"
        >

        <LinearLayout
            android:id="@+id/login_kakao_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_login_btn_h"
            android:backgroundTint="#F9E000"
            android:background="@drawable/round_text_button"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <ImageView
                android:id="@+id/login_kakao_iv"
                android:layout_width="@dimen/activity_login_ic_kakao_size"
                android:layout_height="@dimen/activity_login_ic_kakao_size"
                android:src="@drawable/ic_kakao"
                android:gravity="center"
                />


            <TextView
                android:id="@+id/login_kakao_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kakao_login"
                android:textSize="@dimen/activity_kakao_login_text_size"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/nanumbarungothic_b_600"
                android:textColor="@color/textColor"
                android:gravity="center" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/login_skip_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_login_skip_login"
        android:fontFamily="@font/nanumbarungothic_400"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/login_btn_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:visibility="invisible"
        />


</androidx.constraintlayout.widget.ConstraintLayout>