<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<!--    상단 앱바-->
    <androidx.cardview.widget.CardView
        android:id="@+id/comment_appBar_cv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_h"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="0dp"
        >
        <ImageView
            android:id="@+id/comment_ic_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back_25dp"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/basic_horizontal_margin"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:fontFamily="@font/nanumbarungothic_400"
            android:textColor="@color/black"
            android:textSize="@dimen/top_bar_text_size"
            android:layout_gravity="center"
            />
            <TextView
                android:id="@+id/comment_num_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_count"
                android:fontFamily="@font/nanumbarungothic_400"
                android:textColor="@color/main"
                android:textSize="@dimen/top_bar_count_text_size"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/top_bar_count_gap"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

<!--    댓글 리사이클러뷰 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comment_comment_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/comment_appBar_cv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/comment_comment_cl"
        tools:listitem="@layout/item_comment"
        android:overScrollMode="never"
        />

<!--    답글 인디케이터-->
    <androidx.cardview.widget.CardView
        android:id="@+id/comment_reply_indicator_cv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_comment_reply_indicator_h"
        app:layout_constraintBottom_toTopOf="@id/comment_comment_cl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/gray"
        android:background="@drawable/round_top_12dp"
        android:visibility="invisible"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            >

        <TextView
            android:id="@+id/comment_reply_indicator_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\'닉네임\'님에게 답글"
            android:fontFamily="@font/nanumbarungothic_400"
            android:textSize="@dimen/activity_comment_reply_indicator_text_size"
            android:textColor="@color/lightBlack"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/activity_comment_horizontal_margin"
            android:layout_weight="1"
            />
        <ImageView
            android:id="@+id/comment_reply_indicator_cancel_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_x_black_13dp"
            android:layout_marginEnd="@dimen/activity_comment_horizontal_margin"
            />

        </LinearLayout>


    </androidx.cardview.widget.CardView>


<!--    댓글 달기 -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/comment_comment_cl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_comment_comment_h"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <View
            android:id="@+id/comment_line_v"
            android:layout_width="2.5dp"
            android:layout_height="22dp"
            android:background="@color/main"
            android:layout_marginStart="@dimen/activity_comment_horizontal_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/comment_comment_cl"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <EditText
            android:id="@+id/comment_comment_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/activity_comment_guide_text"
            android:fontFamily="@font/nanumbarungothic_l_300"
            android:textSize="@dimen/activity_comment_guide_text_size"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_marginStart="@dimen/activity_comment_et_start_margin"
            android:layout_marginEnd="@dimen/activity_comment_et_end_margin"
            android:background="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/comment_line_v"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/comment_post_tv"
            />

        <TextView
            android:id="@+id/comment_post_tv"
            android:layout_width="@dimen/activity_comment_post_btn_w"
            android:layout_height="@dimen/activity_comment_post_btn_h"
            android:text="@string/enroll"
            android:background="@drawable/border_stroke"
            android:gravity="center"
            android:fontFamily="@font/nanumbarungothic_l_300"
            android:textSize="@dimen/activity_comment_post_tv_size"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/activity_comment_horizontal_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>